# SYCL_SHA512

./: .gitignore  CMakeLists.txt  README.md
src/: correctness.cpp  correctness.hpp  main.cpp  performance.cpp  performance.hpp  sha512.cpp  sha512.hpp  target_match.cpp  target_match.hpp  utils.cpp  utils.hpp
